# gpui-ce.github.io

./: .gitignore  README.md  config.toml  generate_examples.sh
.github/workflows/: deploy.yml
content/examples/: _index.md  animation.md  async_tasks.md  creating_components.md  custom_drawing.md  data_table.md  drag_drop.md  focus_visible.md  gif_viewer.md  gradient.md  grid_layout.md  hello_world.md  image_loading.md  input.md  interactive_elements.md  layer_shell.md  layout.md  on_window_close_quit.md  opacity.md  ownership_post.md  painting.md  paths_bench.md  pattern.md  scrollable.md  set_menus.md  shadow.md  styling.md  tab_stop.md  text.md  text_layout.md  text_wrapper.md  tree.md  uniform_list.md  window.md  window_positioning.md  window_shadow.md
content/learn/: getting-started.md  intro.md
sass/: style.scss
script/: build  dev  examples
templates/: base.html  examples.html  index.html  learn-page.html  learn-section.html  page.html  section.html  tracks.html
tools/highlight/: Cargo.toml
tools/highlight/src/: main.rs
